--- a/_includes/particles-home.html
+++ b/_includes/particles-home.html
@@ -24,7 +24,12 @@
       {% if site.social.github %}
       <a class="particles-icon" href="https://github.com/{{ site.social.github }}">{% include svg/github.svg %}</a>
       {% endif %}
+      {% if site.social.email %}
+      <a class="particles-icon" href="mailto:{{ site.social.email }}">{% include svg/mail.svg %}</a>
+      {% endif %}
+      {% if site.social.cv %}
       <a class="particles-icon" href="cv">{% include svg/cv-circled.svg %}</a>
+      {% endif %}
     </div>
   </div>
   <div class="particles-scroll">
