--- a/_includes/particles-home.html
+++ b/_includes/particles-home.html
@@ -22,10 +22,10 @@
       <a class="particles-icon" href="https://stackoverflow.com/users/{{ site.social.stackoverflow }}">{% include svg/stackoverflow.svg %}</a>
       {% endif %}
       {% if site.social.github %}
-      <a class="particles-icon" href="https://github.com/{{ site.social.github }}">{% include svg/github.svg %}</a>
+      <a class="particles-icon" href="https://github.com/{{ site.social.github }}">{% include svg/github-outline.svg %}</a>
       {% endif %}
       {% if site.social.email %}
-      <a class="particles-icon" href="mailto:{{ site.social.email }}">{% include svg/mail.svg %}</a>
+      <a class="particles-icon" href="mailto:{{ site.social.email }}">{% include svg/send-mail-circled.svg %}</a>
       {% endif %}
       {% if site.social.cv %}
       <a class="particles-icon" href="cv">{% include svg/cv-circled.svg %}</a>
